views/style.scss
/* ... */
// CSS Categories
.category-box {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0 3vw;
  --filter-value: invert(0.75) sepia(67%) saturate(5) hue-rotate(9deg) brightness(108%) contrast(98%);

  .icon-container {
    flex-grow: 0;
    width: 75px;
    min-width: 50px;
    max-width: 9%;
    margin: 1vw min(2vw, 25px);

    .category-icon {
      width: 100%;
      border-bottom: 3px solid transparent;
      transition: .2s ease-out;
      filter: invert(1);
      -webkit-filter: invert(1);
      padding-bottom: 12px;
      &:hover {
        filter: var(--filter-value);
        -webkit-filter: var(--filter-value);
      }
    }
  }

  .category-info {
    display: none;
    width: 100%;
    order: 2;
  }

  .category {
    display: contents;

    > input:checked {
      + .icon-container .category-icon {
        border-bottom-color: black;
        // If we want hover to also make the highlight gold
        // filter: var(--filter-value);
        // -webkit-filter: var(--filter-value);
      }
      ~ .category-info {
        display: block;
      }
    }
  }

  .category-description {
    margin-bottom: 25px;
    text-align: left;
    line-height: 1.5em;
  }
  .category-prizes {
    text-align: left;
    line-height: 1.5em;
  }
}



.names-container h3 {
	margin: 10px 0px;
	font-size: 25px;
}
.names-container h4 {
  margin: 10px 0px;
}
.names-container > div {
	padding: 2%;
	text-align: center;
  min-width: 180px;
	width: 20%;
  max-width: 100%;
  margin: 0 0 40px;
}
@media only screen and (max-width: 1116px){
  .names-container > div {
    width: 80%;
  }
}
@media only screen and (max-width: 850px){
	.names-container > div {
		width: 50%;
	}
}
@media only screen and (max-width: 500px){
	.names-container > div {
    min-width: unset;
		width: 96%;
	}
}
.names-container {
	max-width: 100vw;
	flex-wrap: wrap;
	justify-content: space-around;
}




.names-container-team h3 {
	margin: 10px 0px;
	font-size: 25px;
}
.names-container-team h4 {
  margin: 10px 0px;
}
.names-container-team > div {
	padding: 2%;
	text-align: center;
  min-width: 360px;
	width: 40%;
  max-width: 100%;
  margin: 0 0 40px;
}
@media only screen and (max-width: 1116px){
  .names-container-team > div {
    width: 80%;
  }
}
@media only screen and (max-width: 850px){
	.names-container-team > div {
		width: 50%;
	}
}
@media only screen and (max-width: 500px){
	.names-container-team > div {
    min-width: unset;
		width: 96%;
	}
}
.names-container-team {
	max-width: 100vw;
	flex-wrap: wrap;
	justify-content: space-around;
}
.flex-grid{
  display: flex;
  flex-wrap: wrap;
  align-items: middle;
  justify-content: center;
  text-align: center;
  gap: 30px;
  margin: 20px;
}
.flex-grid > *{
  width: 28%;
  min-width: 300px;
  &.video {
    aspect-ratio: 16 / 9;
  }
}
.flex-grid > * > h3{
  margin: 15px 0px;
}
.blue-link{
  color: #9cf;
}
.action-link {
  // Experimental, feel free to change
  display: inline-block;
  margin: 4px 0 2px;
  padding: 4px 10px;
  font-size: 16px;
  background-color: #1119;
  border-radius: 5px;
  color: #ca85ff;
  text-decoration: none;
}
.back{
  display: none;
}


.info-on-back{
  height: 200px;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  transition: .5s;
  cursor: pointer;
}
.info-on-back:hover{
  animation-name: changetext;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
}
.info-on-back:not( :hover ){
  animation-name: changetext2;
  animation-duration: 0.5s;
  animation-play-state: running;
}
.hovered > div.front{
  display: none;
}
.hovered > div.back{
  display: initial;
}

// Winners' Info Cards

.info-card {
  width: 320px;
  height: 240px;
  border-radius: 16px;
  transform-origin: 40px 100px;
  transform: /* translate(-50%, -50%) */ translateZ(1px);
  transition: 1s;
  perspective: 1000px;
  transform-style: preserve-3d;
  z-index: 10;
  > * {
    background-color: var(--card-color);
    position: fixed;
    width: 100%;
    height: 100%;
    transition: transform 1s;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    border-radius: 16px;
  }
  &.open {
    top: 50%;
    left: 50%;
    .card-back {
      transform: rotateY(360deg);
    }
    .card-front {
      transform: rotateY(180deg);
    }
  }
  .card {
    animation: none;
    opacity: 1;
    filter: brightness(1);
    width: 100%;
  }
  .card-back {
    transform: rotateY(180deg);
    border-radius: 16px;
    .text-container {
      padding: 16px;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      width: calc(100vw - 32px);
      height: 100%;
      position: absolute;
    }
    .text-container > div {
      padding: 2px 16px;
      max-height: calc(100% - 96px);
      overflow: auto;
    }
    p {
      margin: 6px 8px 12px;
      font-size: 25px;
      line-height: 26px;
      max-height: calc(100% - 96px);
      text-align: center;
    }
  }
  .project-title {
    margin-top: 8px;
    font-size: 30px;
  }
  p.project-link-container {
    margin: 6px 0;
  }
}

@keyframes changetext{
  0%{
    opacity: 1;
  }
  25%{
    opacity: 0;
  }
  75%{
    opacity: 0;
  }
  100%{
    opacity: 1;
  }
}
@keyframes changetext2{
  0%{
    opacity: 1;
  }
  25%{
    opacity: 0;
  }
  75%{
    opacity: 0;
  }
  100%{
    opacity: 1;
  }
}
@media only screen and (min-width: 1133px){
  #first-place{
    order: 2;
  }
  #second-place{
    margin-top: 30px;
    order: 1;
  }
  #third-place{
    margin-top: 50px;
    order: 3;
  }
}

